# DNAlgorithms

./: .gitignore  CMakeLists.txt  DNAUtility.h  FASTQFile.cpp  FASTQFile.h  FASTQRecord.cpp  FASTQRecord.h  main.cpp
classes/: K_MerIndex.cpp  K_MerIndex.h
data/: files
